app/main/default/objects/Account/fields/TASKRAY__trOnboardingEndDate__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TASKRAY__trOnboardingEndDate__c</fullName>
        <description>Used by TaskRay to record the actual end date of the onboarding project associated with this account.</description>
        <inlineHelpText>Used by TaskRay to record the actual end date of the onboarding project associated with this account.</inlineHelpText>
        <label>Onboarding End</label>
        <type>Date</type>
    </fields>
</CustomObject>